docs(gradle): mark formatting checks design spec as implemented